# Bird_Species_Recognition_AML2024

./: .gitignore  AML_PROJECT.ipynb  AML_PROJECT2-2.ipynb  README.md  class_attributes.ipynb  model_ed.py  pyproject.toml  requirements.txt
src/: custom_models.py  data_generator.py  ed_train.py  model.py  model_ed.py  preprocessing_data.py  process_data.py  train.py  utils.py
src/configs/: config.yaml
src/custom_models/: __init__.py  effnet.py  vit.py
src/utils/: __init__.py  data_generator.py  general_utils.py  model_builder.py
